ST-009: Fixed the footer covered by main section

--- a/css/style.css
+++ b/css/style.css
@@ -340,6 +340,7 @@ footer {
 
 @media (max-width: 767px) {
   footer {
+    position: relative;
     top: 300px;
   }
 }
